few kms tests - abort - *ERROR* .* mismatch in dpll_hw_state.c
<7> [133.509156] i915 0000:00:02.0: [drm:intel_dp_link_train_phy [i915]] [CONNECTOR:277:DP-3][ENCODER:276:DDI TC2/PHY TC2][DPRX] Link Training failed at link rate = 540000, lane count = 4
<7> [133.509465] i915 0000:00:02.0: [drm:intel_dp_start_link_train [i915]] [CONNECTOR:277:DP-3][ENCODER:276:DDI TC2/PHY TC2][DPRX] Ignore the link failure
<7> [133.531438] i915 0000:00:02.0: [drm:drm_dp_dpcd_access [drm_display_helper]] AUX USBC2/DDI TC2/PHY TC2: Too many retries, giving up. First error: -6
<7> [133.531586] i915 0000:00:02.0: [drm:intel_enable_transcoder [i915]] enabling pipe D
<7> [133.548841] i915 0000:00:02.0: [drm:intel_audio_codec_enable [i915]] [CONNECTOR:277:DP-3][ENCODER:276:DDI TC2/PHY TC2] Enable audio codec on [CRTC:238:pipe D], 36 bytes ELD
<7> [133.565846] i915 0000:00:02.0: [drm:verify_connector_state [i915]] [CONNECTOR:277:DP-3]
<7> [133.566227] i915 0000:00:02.0: [drm:intel_modeset_verify_crtc [i915]] [CRTC:238:pipe D]
<3> [133.567202] i915 0000:00:02.0: [drm] *ERROR* [CRTC:238:pipe D] mismatch in dpll_hw_state.cx0pll C20
<3> [133.567424] i915 0000:00:02.0: [drm] *ERROR* expected:
<7> [133.567429] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] c20pll_hw_state:
<7> [133.567645] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] tx[0] = 0xbe88, tx[1] = 0x4800, tx[2] = 0x0000
<7> [133.567848] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] cmn[0] = 0x0500, cmn[1] = 0x0005, cmn[2] = 0x0000, cmn[3] = 0x0000
<7> [133.568046] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[0] = 0x108c
<7> [133.568246] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[1] = 0x2108
<7> [133.568459] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[2] = 0xcc9c
<7> [133.568649] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[3] = 0xbfc1
<7> [133.568839] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[4] = 0x4b9a
<7> [133.569025] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[5] = 0x3f81
<7> [133.569206] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[6] = 0x2000
<7> [133.569406] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[7] = 0x0001
<7> [133.569595] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[8] = 0x5000
<7> [133.569782] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[9] = 0x0000
<7> [133.569966] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mpllb[10] = 0x0000
<3> [133.570147] i915 0000:00:02.0: [drm] *ERROR* found:
<7> [133.570151] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] c20pll_hw_state:
<7> [133.570344] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] tx[0] = 0x0000, tx[1] = 0x0000, tx[2] = 0x0000
<7> [133.570528] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] cmn[0] = 0x0000, cmn[1] = 0x0000, cmn[2] = 0x0000, cmn[3] = 0x0000
<7> [133.570713] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mplla[0] = 0x0000
<7> [133.570894] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mplla[1] = 0x0000
<7> [133.571074] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mplla[2] = 0x0000
<7> [133.571251] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mplla[3] = 0x0000
<7> [133.571446] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mplla[4] = 0x0000
<7> [133.571631] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mplla[5] = 0x0000
<7> [133.571813] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mplla[6] = 0x0000
<7> [133.571992] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mplla[7] = 0x0000
<7> [133.572171] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mplla[8] = 0x0000
<7> [133.572357] i915 0000:00:02.0: [drm:intel_cx0pll_dump_hw_state [i915]] mplla[9] = 0x0000
<4> [133.572533] ------------[ cut here ]------------
<4> [133.572535] i915 0000:00:02.0: pipe state doesn't match!
<4> [133.572563] WARNING: CPU: 3 PID: 1122 at drivers/gpu/drm/i915/display/intel_modeset_verify.c:223 intel_modeset_verify_crtc+0x46e/0x570 [i915]
<4> [133.572761] Modules linked in: snd_hda_codec_hdmi snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core snd_pcm i915 prime_numbers i2c_algo_bit ttm drm_display_helper drm_buddy x86_pkg_temp_thermal coretemp kvm_intel kvm smsc75xx mei_gsc_proxy e1000e crct10dif_pclmul usbnet video crc32_pclmul wmi_bmof mii ghash_clmulni_intel i2c_i801 ptp mei_me i2c_mux thunderbolt pps_core i2c_smbus mei intel_lpss_pci wmi
<4> [133.572817] CPU: 3 PID: 1122 Comm: kms_flip Not tainted 6.10.0-rc1-CI_DRM_14866-g692c2b764533+ #1
<4> [133.572821] Hardware name: Intel Corporation Meteor Lake Client Platform/MTL-P DDR5 SODIMM SBS RVP, BIOS MTLPFWI1.R00.3471.D91.2401310918 01/31/2024
<4> [133.572824] RIP: 0010:intel_modeset_verify_crtc+0x46e/0x570 [i915]
<4> [133.573025] Code: fd ff ff 48 8b 7b 08 4c 8b 7f 50 4d 85 ff 75 03 4c 8b 3f e8 74 55 2e e1 4c 89 fa 48 c7 c7 00 4e 8b a0 48 89 c6 e8 52 24 ac e0 <0f> 0b e9 41 fe ff ff 48 8b 7b 08 4c 8b 57 50 4d 85 d2 75 03 4c 8b
<4> [133.573029] RSP: 0018:ffffc90001a5fa50 EFLAGS: 00010286
<4> [133.573033] RAX: 0000000000000000 RBX: ffff888112260000 RCX: 0000000000000000
<4> [133.573036] RDX: 0000000000000002 RSI: ffffffff82434c0a RDI: 00000000ffffffff
<4> [133.573038] RBP: ffff8881096a9000 R08: 0000000000000000 R09: ffffc90001a5f880